--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,17 @@ license = "MIT"
 [dependencies]
 derivative = "1.0.2"
 hex = "0.3.2"
-image = { version = "0.21.0", default-features = false, features = ["png_codec"] }
 semver = { version = "0.9.0", features = ["serde"] }
 serde = { version = "1.0.89", features = ["derive"] }
 serde_json = "1.0.39"
 zip = { version = "0.5.1", default-features = false, features = ["deflate"] }
+
+# Optional dependencies
+image = { version = "0.21.0", default-features = false, features = ["png_codec"], optional = true }
+
+[features]
+default = []
+
+# Automatically load the images within the Pyxel document using image
+images = ["image"]
 
